--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ django-cors-headers==4.6.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
+gunicorn==23.0.0
+packaging==24.2
 pillow==11.1.0
 PyJWT==2.10.1
 sqlparse==0.5.3
