--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 asgiref==3.8.1
+azampay==0.5
+certifi==2024.12.14
+charset-normalizer==3.4.1
 Django==5.1.4
 django-cors-headers==4.6.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 gunicorn==23.0.0
+idna==3.10
 packaging==24.2
+phonenumbers==8.13.53
 pillow==11.1.0
 PyJWT==2.10.1
+requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.12.2
+urllib3==2.3.0
