--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ packaging==24.2
 phonenumbers==8.13.53
 pillow==11.1.0
 PyJWT==2.10.1
+python-dotenv==1.0.1
 requests==2.32.3
 sqlparse==0.5.3
 typing_extensions==4.12.2
